--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campeonato Nacional de Robótica | CANAR</title>
-    <link rel="shortcut icon" href="../img/logos/cnr2.png" type="image/x-icon">
-    <script src="../src/js/jquery.js"></script>
-    <script src="../src/js/jquery.min.js"></script>
+    <link rel="shortcut icon" href="img/logos/cnr2.png" type="image/x-icon">
+    <script src="src/js/jquery.js"></script>
+    <script src="src/js/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../extra/index.css">
+    <link rel="stylesheet" href="extra/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
         integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -46,7 +46,7 @@
 
     .canar2 {
         height: auto;
-        background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
+        background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(img/champp.jpg);
         background-repeat: repeat;
         background-size: 100%;
     }
@@ -65,7 +65,7 @@
     }
 
     nav {
-        background: url(../img/img/BG.png);
+        background: url(img/img/BG.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -115,7 +115,7 @@
     }
 
     .banner {
-        background: linear-gradient(180deg, #0000003f, #0000005a), url("../img/team-done.jpg");
+        background: linear-gradient(180deg, #0000003f, #0000005a), url("img/team-done.jpg");
         background-repeat: no-repeat;
         background-size: cover!important;
         background-position: center center;
@@ -127,7 +127,7 @@
     }
 
     .banner2 {
-        background: linear-gradient(180deg, #0000003f, #0000005a), url("../img/img2.jpg");
+        background: linear-gradient(180deg, #0000003f, #0000005a), url("img/img2.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -160,7 +160,7 @@
     }
 
     .banner3 {
-        background: linear-gradient(180deg, #0000004f, #00000075), url("../img/camp.jpg");
+        background: linear-gradient(180deg, #0000004f, #00000075), url("img/camp.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -186,7 +186,7 @@
     }
 
     .video-banner {
-        background: linear-gradient(135deg, #ff00008b, #ff000067, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #ff00008b, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423ae, #ff000049, #ff00008b), url("../img/img/BG.png");
+        background: linear-gradient(135deg, #ff00008b, #ff000067, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #ff00008b, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423ae, #ff000049, #ff00008b), url(img/img/BG.png);
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
@@ -257,7 +257,7 @@
 
         .canar {
             height: 50vh;
-            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
+            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(img/champp.jpg);
             background-repeat: repeat;
             background-size: 100%;
         }
@@ -267,7 +267,7 @@
 
     .canar {
         height: 75vh;
-        background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
+        background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(img/champp.jpg);
         background-repeat: repeat;
         background-size: 100%;
     }
@@ -285,14 +285,14 @@
 
         .canar {
             height: 75vh;
-            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
+            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(img/champp.jpg);
             background-repeat: repeat;
             background-size: 100%;
         }
 
         .canar2 {
             height: auto;
-            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
+            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(img/champp.jpg);
             background-repeat: repeat;
             background-size: 100%;
         }
@@ -523,6 +523,7 @@
                     <span id="ans">Edição</span>
                     <div class="e-d position-absolute">
                         <ul>
+                            <li class="y" id="y2023"> 2023</li>
                             <li class="y" id="y2022"> 2022</li>
                             <li class="y" id="y2021"> 2021</li>
                         </ul>
@@ -575,7 +576,7 @@
             <h1 class="text-white">
                 CAPACITAR OS JOVENS DO MUNDO ATRAVÉS DO CTEM
             </h1>
-            <a href="../impact.html"><button
+            <a href="impact.html"><button
                     style="border: 1px solid white; border-radius: 0; color: white; font-weight: 600"
                     class="btn bt_nossa btn-outline-white">VEJA NOSSO IMPACTO <i
                         class="bi bi-arrow-right-short"></i></button></a>
@@ -819,12 +820,16 @@
            
         })
 
+        
+        $("#y2023").click(function () {
+            window.location.href = "/2023";
+        })
 
         $("#y2022").click(function () {
-            window.location.href = "../2022";
+            window.location.href = "/2022";
         })
         $("#y2021").click(function () {
-            window.location.href = "../2021";
+            window.location.href = "/2021";
         })
 
 
