--- a/sponsor/pack4/index.html
+++ b/sponsor/pack4/index.html
@@ -32,6 +32,7 @@
     .form-control:focus-within {
         border-color: #eeb823 !important;
     }
+
     .form-patrocinador{
         width: 600px;
         max-width: 100%;
@@ -135,7 +136,7 @@
     <div class="banner2">
         <div class="text-center bannerr w-75 mx-auto p-3">
             <h1>
-                INSCREVER SEU TEAM
+                INSCREVER COMO PATROCINADOR
             </h1>
 
         </div>
@@ -144,12 +145,12 @@
 
     <main class="container py-lg-4 py-xxl-5">
         <h1 class="text-warning">Seja um patrocinador / Parceiro</h1>
-        <div class="form-patrocinador row">
+        <div class="form-patrocinador  row">
             <div class="col-12 my-2 my-lg-0">
                 <div class="bg-light rounded-4 p-3">
                     <b class="text-secondary">Preencha o formulario abaixo</b>
                     <hr>
-                    <div >
+                    <div class="row">
                         <div class="my-3">
                             <label for="nome-parceiro" class="text-secondary">Nome do parceiro</label>
                             <input type="text" name="nome-parceiro" id="nome-parceiro"
@@ -174,10 +175,10 @@
                             <label for="email" class="text-secondary">Patrocinador...</label>
 
                             <select name="prestacao" id="prestacao" class="form-control">
-                                <option selected value="Patrocinador Starter">Patrocinador Starter - 150,000.00 Kz</option>
-                                <option value="Patrocinador Bronze">Patrocinador Bronze - 300,000.00 Kz</option>
+                                <option value="Patrocinador Starter">Patrocinador Starter - 150,000.00 Kz</option>
+                                <option  value="Patrocinador Bronze">Patrocinador Bronze - 300,000.00 Kz</option>
                                 <option value="Patrocinador Prata">Patrocinador Prata - 500,000.00 Kz</option>
-                                <option value="Patrocinador Gold">Patrocinador Gold - 1,500,000.00 Kz</option>
+                                <option selected value="Patrocinador Gold">Patrocinador Gold - 1,500,000.00 Kz</option>
                             </select>
                         </div>
                     </div>
