--- a/sobre/index.html
+++ b/sobre/index.html
@@ -63,49 +63,18 @@
                     <span id="ans">Edição</span>
                     <div class="e-d position-absolute">
                         <ul>
+                            <li class="y" id="y2023"> 2023</li>
                             <li class="y" id="y2022"> 2022</li>
                             <li class="y" id="y2021"> 2021</li>
                         </ul>
                     </div>
                 </div>
-            </a><a class="ativo" href="./">
+            </a><a class="ativo" href="/">
                 <div>
                     CANAR
                 </div>
             </a>
         </div>
-        <div style="display: none;" class=" container justify-center menu-cont gap-4 ">
-
-            <a href="../index.html">
-                <div>
-                    Home
-                </div>
-            </a><a class="" href="../archives.html">
-                <div>
-                    Arquivos
-                </div>
-            </a>
-            <a href="../results.html">
-                <div>
-                    Resultados
-                </div>
-            </a><a class="text-white">
-                <div class="events position-relative">
-                    <span id="ans">Edição</span>
-                    <div class="e-d position-absolute">
-                        <ul>
-                            <li class="y" id="y2022"> 2022</li>
-                            <li class="y" id="y2021"> 2021</li>
-                        </ul>
-                    </div>
-                </div>
-            </a> <a href="./">
-                <div>
-                    CANAR
-                </div>
-            </a>
-        </div>
-
     </div>
     </div>
     <div class="banner2">
@@ -338,6 +307,9 @@
         })
 
 
+        $("#y2023").click(function () {
+            window.location.href = "../2023";
+        })
 
         $("#y2022").click(function () {
             window.location.href = "./";
