add temicro sponsor

--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@
         <div class="d-flex gap-5">
             <a href="#"><img src="./img/img/Rema.png" height="45em" alt=""></a>
             <a href="#"><img src="./img/img/Vanguard.png" height="45em" alt=""></a>
+            <a href="https://tecmicro.ao/"><img src="./img/img/tecmicro.png" height="45em" alt=""></a>
         </div>
     </main>
 
