add foots mundial
Signed-off-by: Sebastião Sukuakueche <sukuakueches@gmail.com>

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     }
 
     .video-banner {
-        background: linear-gradient(135deg, #ff00008b, #ff000067, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #ff00008b, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423ae, #ff000049, #ff00008b), url(img/img/BG.png);
+        background: linear-gradient(135deg, #ff00008b, #ff000067, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #ff00008b, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423c2, #e8c423ae, #ff000049, #ff00008b)/*, url(img/img/BG.png)*/;
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
@@ -476,7 +476,7 @@
 
     .b_d {
 
-        background: #dfb913;
+        background: #e8c423;
     }
 </style>
 
@@ -592,12 +592,13 @@
     </div>
     <br>
     <br>
+    <!-- 
     <div class="teams container bg-light p-4" id="teams">
         <h2 class="l-b text-danger">CANAR - 2022</h2>
         <p class="text-secondary">Acompanhe a galeria do <b>CANAR 2022</b></p>
 
     </div>
-
+-->
 
     <div class="container">
         <hr>
@@ -607,6 +608,17 @@
         <main class="container gal">
             <h1 class="text-danger l-b">Galeria</h1>
             <div class="owl-carousel owl-theme" id="gallery">
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/1.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/2.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/3.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/4.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/5.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/6.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/7.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/8.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/9.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/10.jpg" alt=""></div>
+                <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/mundial/11.jpg" alt=""></div>
                 <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/team-done.jpg" alt=""></div>
                 <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/champp.jpg" alt=""></div>
                 <div class="mx-4"><img style="width: 20rem; height: 15rem;" src="./img/757236.jpg" alt=""></div>
@@ -614,12 +626,6 @@
             </div>
 
         </main>
-
-
-
-
-
-
 
 
         <hr>
